--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1,33 +1,51 @@
-# Files in the config/locales directory are used for internationalization
-# and are automatically loaded by Rails. If you want to use locales other
-# than English, add the necessary files in this directory.
-#
-# To use the locales, use `I18n.t`:
-#
-#     I18n.t "hello"
-#
-# In views, this is aliased to just `t`:
-#
-#     <%= t("hello") %>
-#
-# To use a different locale, set it with `I18n.locale`:
-#
-#     I18n.locale = :es
-#
-# This would use the information in config/locales/es.yml.
-#
-# The following keys must be escaped otherwise they will not be retrieved by
-# the default I18n backend:
-#
-# true, false, on, off, yes, no
-#
-# Instead, surround them with single quotes.
-#
-# en:
-#   "true": "foo"
-#
-# To learn more, please read the Rails Internationalization guide
-# available at https://guides.rubyonrails.org/i18n.html.
-
 en:
+  base_title: "Library"
   hello: "Hello world"
+  layouts:
+    header:
+      brand: "Awesome library"
+      about: "About"
+      contact: "Contact"
+      help: "Help"
+    footer:
+      source: "View Source code on github"
+      about: "About"
+      news: "News"
+      contact: "Contact"
+  static_pages:
+    home:
+      title: "Home"
+      name: "Home"
+      welcome: "Welcome to awesome library"
+      explore: "Let's explore the world of knowledge with us!"
+      sign_up_now: "Sign up now!"
+      image: "Library"
+    about:
+      title: "About"
+      name: "About"
+      what_can_be_found: "The Library is the largest library in the world
+                          , with millions of books, recordings, photographs,.."
+      suggest_sign_up: "We strongly recommend you to sign up so we can help
+                  you much more!"
+      sign_up: "Here is the link!"
+    help:
+      title: "Help"
+      name: "Help"
+      description: "We are building a community of library supporters,
+      if you can help us, please contact us in "
+      contact_site: "this size"
+    contact:
+      title: "Contact"
+      name: "Contact"
+      des: "Contact us:"
+      via_phone: "Via phone number : %{phone_number}"
+      via_mail: "Via email : "
+      email: "library@awesome.com"
+  admin:
+    admin_page:
+      home:
+        title: "Home Page"
+        intro: "This is the home page"
+        hint: "For now, that's it!"
+
+
